compiler/testData/cli/jvm/nameBasedDestructuringWithoutCompilerArgument.kt
fun foo() {
    (val first, val second) = 1 to 2
}